Updation of the role of the user like JOBSEEKER